--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <body>
 	<div class="container">
 		<img src="https://bit.ly/3nbSNBL" alt="Random Screenshots From Manga">
-<p></p><h1 style="clear: both; text-align: center;"><b><span style="font-family: helvetica;">Random screenshots from manga&nbsp;</span></b></h1><div class="separator" style="clear: both; text-align: left;"><br /></div><div class="separator" style="clear: both; text-align: justify;"><span style="font-family: helvetica;">Random Screenshots from Manga adalah grup yang membahas dan membagikan gambar-gambar (screenshots) dari berbagai jenis manga. Grup ini terbuka untuk penggemar manga dari segala usia dan latar belakang dan bertujuan untuk memfasilitasi diskusi yang positif dan interaksi yang menyenangkan antara para anggota grup. Dalam grup ini, pengguna dapat saling berbagi screenshot favorit mereka atau merekomendasikan manga yang menarik untuk dibaca. Grup ini juga menyediakan ruang bagi para penggemar manga untuk berbagi pendapat dan pengalaman mereka tentang komunitas manga di Indonesia dan di seluruh dunia.</span></div>
+<p>
+</p>
+<h1 
+style="clear: both; text-align: center;">
+<b>
+<span style="font-family: helvetica;"
+>Random screenshots from manga&nbsp;</span>
+</b>
+</h1>
+<div class="separator" style="clear: both; text-align: left;">
+<br />
+</div>
+<div class="separator" style="clear: both; text-align: justify;"
+><span style="font-family: helvetica;"
+>Random Screenshots from Manga adalah grup yang membahas dan membagikan gambar-gambar (screenshots) dari berbagai jenis manga. Grup ini terbuka untuk penggemar manga dari segala usia dan latar belakang dan bertujuan untuk memfasilitasi diskusi yang positif dan interaksi yang menyenangkan antara para anggota grup. Dalam grup ini, pengguna dapat saling berbagi screenshot favorit mereka atau merekomendasikan manga yang menarik untuk dibaca. Grup ini juga menyediakan ruang bagi para penggemar manga untuk berbagi pendapat dan pengalaman mereka tentang komunitas manga di Indonesia dan di seluruh dunia.</span>
+</div>
 <div class="countdown">00:00:10</div>
 </body>
