--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-   <title> Halaman A </title>
-    <meta http-equiv="refresh" content="3;url=https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share">
+   <title> Random Screenshots from Manga</title>
+    <meta http-equiv="refresh" content="0;url=https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share">
   <head>
-  <body> Halaman A </body>
+ <body> Halaman A </body>
 </html>
