--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
    <title> Random Screenshots from Manga</title>
+    <p>Random Screenshots from Manga adalah grup yang membahas dan membagikan gambar-gambar (screenshots) dari berbagai jenis manga. Grup ini terbuka untuk penggemar manga dari segala usia dan latar belakang dan bertujuan untuk memfasilitasi diskusi yang positif dan interaksi yang menyenangkan antara para anggota grup. Dalam grup ini, pengguna dapat saling berbagi screenshot favorit mereka atau merekomendasikan manga yang menarik untuk dibaca. Grup ini juga menyediakan ruang bagi para penggemar manga untuk berbagi pendapat dan pengalaman mereka tentang komunitas manga di Indonesia dan di seluruh dunia.</p>
     <meta http-equiv="refresh" content="0;url=https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share">
   <head>
- <body> Halaman A </body>
+ <body> Random Screenshots from Manga</body>
 </html>
