--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title> random screenshots from manga </title> 
   <script type="text/javascript">
-   window.location.replace("https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share");
+   window.location.replace("https://random-screenshots-from-manga.000webhostapp.com");
   </script>
   <head>
  <body> Random Screenshots From Manga </body>
