--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="content">
   <p>Ini adalah konten yang ingin Anda tampilkan sebelum pengalihan.</p>
 </div>
-<p>Anda akan dialihkan ke <span id="url">https://www.w3docs.com</span> dalam <span id="counter">10</span> detik.</p>
+<p>Anda akan dialihkan ke <span id="url">https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share</span> dalam <span id="counter">10</span> detik.</p>
 
 <script type="text/javascript">
 var url = document.getElementById("url").innerHTML; 
