--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>random screenshots from manga</title> 
 
 <div id="content">
-  <p>Ini adalah konten yang ingin Anda tampilkan sebelum pengalihan.</p>
+  <p>Random Screenshots from Manga adalah grup yang membahas dan membagikan gambar-gambar (screenshots) dari berbagai jenis manga. Grup ini terbuka untuk penggemar manga dari segala usia dan latar belakang dan bertujuan untuk memfasilitasi diskusi yang positif dan interaksi yang menyenangkan antara para anggota grup.</p>
 </div>
 <p>Anda akan dialihkan ke <span id="url">https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share</span> dalam <span id="counter">10</span> detik.</p>
 
@@ -20,7 +20,7 @@ var interval = setInterval(function() {
   if (counter == 0) { 
 //jika counter sudah nol
     clearInterval(interval); //hentikan interval
-    window.location = url; 
+    window.location = url;https://www.facebook.com/groups/random.screenshots.from.manga/?ref=share
 //alihkan ke url tujuan
   } else { //jika belum nol
     document.getElementById("counter").innerHTML = counter; 
