--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     border-color: #507329;
 }</style>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VC0H3X3M9H"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M0YBJ1V5YN"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VC0H3X3M9H');
+     window.dataLayer = window.dataLayer || []; 
+     function gtag(){dataLayer.push(arguments);} 
+     gtag('js', new Date()); 
+  
+     gtag('config', 'G-M0YBJ1V5YN'); 
 </script>
 </head>
 <body>
