--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:height" content="88" />
     <meta property="og:image:type" content="image/png" />
     <!-- Bootstrap core CSS -->
-    <link href="https://otakudesu.stream/files/style-view.css" async>rel="stylesheet">
+    <link href="https://random-screenshots-from-manga.github.io/style-view.css" async>rel="stylesheet">
     <!-- Custom styles for this template -->
     <script src="https://otakudesu.stream/files/jquery.min.js" async></script>
     <link rel='stylesheet' type='text/css' href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" async>/>
