--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <meta property="og:image:height" content="88" />
     <meta property="og:image:type" content="image/png" />
     <!-- Bootstrap core CSS -->
-    <link href="https://random-screenshots-from-manga.github.io/style-view.css" async>rel="stylesheet">
+    <link href="https://random-screenshots-from-manga.github.io/style-view.css"rel="stylesheet">
     <!-- Custom styles for this template -->
-    <script src="https://otakudesu.stream/files/jquery.min.js" async></script>
+    <script src="https://random-screenshots-from-manga.github.io/jquery.min.js"</script>
     <link rel='stylesheet' type='text/css' href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" async>/>
 <style>.info-icon{margin-top:-6px}</style>
 <style type="text/css">body{background-color:#000000;background-image:url("");background-repeat:no-repeat;background-position:top center;background-attachment:fixed;background-size:cover;}.panel-default>.panel-heading{background-color:rgb(255,172,1)!important;border-color:#FFAC01!important;text-align:center;}.navbar-default{background-color:#00090e!important;border-color:#00a1ff!important}.hanamenu{text-align:center;margin:15px auto;}.hanatombol{font-family:segoe ui;font-weight:400;font-size:17px!important;background:rgba(252,255,255,0.35);margin:0 5px;padding:2px 4% 5px;}hr{border-top:1px solid #bbb!important;}.panel{background-color:rgba(255,255,255,0.8)!important;}</style>
