--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                 <center>
                                     <br>
                                     <div>
-                                        <img width="80%" style="text-align: center;margin:20px" src="https://z-m-scontent.fpku3-2.fna.fbcdn.net/v/t39.30808-6/340937402_608476030925413_3454499267862323610_n.jpg?stp=c0.5000x0.5000f_dst-jpg_e15_p1080x565_q60_tt1_u&amp;efg=eyJ1cmxnZW4iOiJ1cmxnZW5fZnJvbV91cmwifQ&amp;_nc_cid=1225&amp;_nc_ad=z-m&amp;_nc_rml=0&amp;_nc_ht=z-m-scontent.fpku3-2.fna&amp;_nc_cat=110&amp;_nc_ohc=XpmWIun0BWMAX_savm9&amp;ccb=1-7&amp;_nc_sid=31b3e3&amp;oh=00_AfD8kKvn8dbUkkWFsp_qlMT9AvjxXQxnqHe2w4wEeTeztg&amp;oe=64A55B69">
+                                        <img width="80%" style="text-align: center;margin:20px" src="https://z-m-scontent.fpku3-1.fna.fbcdn.net/v/t39.30808-6/358086223_226568536993614_1722443679264895473_n.jpg?stp=dst-webp_e15_q70_s725x405_tt1_u&efg=eyJ1cmxnZW4iOiJ1cmxnZW5fZnJvbV91cmwifQ&_nc_eui2=AeGa7rSdx-TEJpZiTeU5h83oIX2iWBo3sfkhfaJYGjex-Vc-KwiJFIZ2MHC6XFV6lZqnnqk0PKkYnrEuEoAFpvP0&_nc_cid=1225&_nc_ad=z-m&_nc_rml=0&_nc_ht=z-m-scontent.fpku3-1.fna&_nc_cat=101&_nc_ohc=K11xnTPnSgcAX_eNF3A&ccb=1-7&_nc_sid=1ac024&oh=00_AfDKkZATRfDaQ7AKQBXkGu-BcGsJPAwDSFuV3nZIi6sYHg&oe=650C9C91">
                                     </center><br>
                                     <h2>Tentang Grup</h2>
                                     <p style="margin:10px">
